--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-2 col-lg-2 col-md-3 col-sm-4 col-5">
                             <div class="logo mt-50 mb-50 transition5">
-                                <h1 class="text-primary"> Ajay Vishan</h1>
+                                <a href="https://ajayvishan.github.io/ajayvishan/index.html" class="text-primary"> Ajay Vishan</a>
                                 <!-- <a class="header-logo" href="index.html"><img src="images/logo/logo.png"
                                         alt="HIBRO"></a>
                                 <a class="header-sticky-logo" href="index.html"><img src="images/logo/black-logo.png"
